--- a/src/components/pages/Checkout/CheckoutShippingInformation.scss
+++ b/src/components/pages/Checkout/CheckoutShippingInformation.scss
@@ -1,5 +1,18 @@
+@import '../../../styles/mixins/breakpoints.scss';
+@import '../../../styles/variables.scss';
+
 .checkout-shipping-information__select-method {
     margin-top: 10px;
     padding: 15px;
     border: 1px solid #eee;
+}
+
+.checkout-summary__warning {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 15px;
+    padding: 10px;
+    background-color: $color-secondary;
+    border-radius: $border-radius-default;
 }
