--- a/src/components/pages/Admin/Orders/AdminOrdersSendEmail.scss
+++ b/src/components/pages/Admin/Orders/AdminOrdersSendEmail.scss
@@ -7,6 +7,13 @@
     }
 }
 
+.admin-orders-payment-link__form-item {
+
+    &:not(:first-child) {
+        margin-top: 20px;
+    }
+}
+
 .admin-orders-send-email__actions {
     display: flex;
     justify-content: flex-end;
