--- a/src/components/common/layout/Header/DesktopHeader.scss
+++ b/src/components/common/layout/Header/DesktopHeader.scss
@@ -60,8 +60,47 @@
     border-radius: 8px;
 }
 
+.desktop-header__tienda {
+  display: inline;
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  vertical-align: baseline;
+  background: transparent;
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+
+}
+
+.desktop-header__765 {
+  display: inline;
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  vertical-align: baseline;
+  background: transparent;
+  color: white;
+  font-family: $font-family-heading;
+  text-decoration: none;
+  font-weight: 700;
+}
+
 .desktop-header__logo-link {
     align-self: center;
+    text-decoration: none;
+    text-align: center;
+    border: 1px solid #eee;
+    border-radius: 40px;
+    cursor: pointer;
+    background-color: #ff4056;
+    padding: 10px;
+
+    &:hover {
+        span {
+            color: $color-primary;
+        }
+    }
 }
 
 .desktop-header__button {
