--- a/src/components/pages/Fotocopias/Fotocopias.scss
+++ b/src/components/pages/Fotocopias/Fotocopias.scss
@@ -74,7 +74,32 @@
     border-radius: 4px;
 }
 
-.admin-collection-edit__form-item {
+.fotocopias-page__form-item {
+
+    &:not(:first-child) {
+        margin-top: 30px;
+    }
+}
+
+/*
+ * Form
+ */
+
+.fotocopias-page__form {
+    display: flex;
+    margin-top: 30px;
+}
+
+.fotocopias-page__left-column {
+    width: 50%;
+}
+
+.fotocopias-page__right-column {
+    width: 50%;
+    margin-left: 30px;
+}
+
+.fotocopias-page__form-item {
 
     &:not(:first-child) {
         margin-top: 30px;
