--- a/src/components/pages/Fotocopias/FotocopiasAddForm.scss
+++ b/src/components/pages/Fotocopias/FotocopiasAddForm.scss
@@ -1,19 +1,116 @@
-.fotocopias-page-add-form__item {
+@import '../../../styles/variables.scss';
 
-    &:not(:first-child) {
-        margin-top: 20px;
-    }
-}
+/*
+ * Header
+ */
 
-.fotocopias-page-add-form__actions {
+.fotocopias-page__header {
     display: flex;
-    justify-content: flex-end;
-    margin-top: 20px;
 }
 
-.fotocopias-page-add-form__button {
+.fotocopias-page__title {
+    width: 100%;
+    align-self: center;
+}
+
+.fotocopias-page__toolbar {
+    width: 100%;
+    display: flex;
+    align-self: center;
+    justify-content: flex-end;
+}
+
+.fotocopias-page__toolbar-button {
+    width: 130px;
 
     &:not(:first-child) {
         margin-left: 10px;
+    }
+}
+
+/*
+ * Loader
+ */
+
+.fotocopias-page__spinner {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+/*
+ * List
+ */
+
+.fotocopias-page__list {
+    margin-top: 30px;
+}
+
+.fotocopias-page__link {
+    & > a {
+        color: $color-primary;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
+.fotocopias-page__labels {
+    display: flex;
+}
+
+.fotocopias-page__label {
+    &:not(:first-child) {
+        margin-left: 5px;
+    }
+}
+
+.fotocopias-page__no-results {
+    margin-top: 30px;
+    padding: 10px;
+    background-color: $color-secondary;
+    border-radius: 4px;
+}
+
+.fotocopias-page__form-item {
+
+    &:not(:first-child) {
+        margin-top: 30px;
+    }
+}
+
+/*
+ * Form
+ */
+
+.fotocopias-page__form {
+    display: flex;
+    margin-top: 30px;
+}
+
+.fotocopias-page__left-column {
+    width: 30%;
+}
+
+.fotocopias-page__right-column {
+    width: 30%;
+    margin-left: 30px;
+}
+
+.fotocopias-page__form-item {
+
+    &:not(:first-child) {
+        margin-top: 30px;
+    }
+}
+
+.fotocopias-page__button {
+
+    &:not(:first-child) {
+        margin-left: 10px;
+        margin-top: 20px;
+        width: 30%;
     }
 }
