--- a/src/components/pages/Fotocopias/Fotocopias.scss
+++ b/src/components/pages/Fotocopias/Fotocopias.scss
@@ -11,6 +11,10 @@
 .fotocopias-page__title {
     width: 100%;
     align-self: center;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    padding: 15 0 15 0;
 }
 
 .fotocopias-page__toolbar {
