--- a/src/components/common/files/FileLibrary.scss
+++ b/src/components/common/files/FileLibrary.scss
@@ -1,9 +1,10 @@
-.image-library {
+.file-library {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 25px;
 }
 
-.image-library__placeholder {
+.file-library__placeholder {
     display: flex;
     position: relative;
     width: 187px;
@@ -17,24 +18,24 @@
         height: 180px;
     }
 
-    &:hover > .image-library__placeholder-overlay {
+    &:hover > .file-library__placeholder-overlay {
         display: flex;
     }
 }
 
-.image-library__placeholder-overlay {
+.file-library__placeholder-overlay {
     position: absolute;
     width: 100%;
     height: 100%;
     display: none;
 }
 
-.image-library__placeholder-overlay-content {
+.file-library__placeholder-overlay-content {
     align-self: center;
     padding: 0 30px 0 30px;
 }
 
-.image-library__button {
+.file-library__button {
 
     &:not(:first-child) {
         margin-top: 7.5px;
