--- a/src/components/common/forms/RadioSelect.scss
+++ b/src/components/common/forms/RadioSelect.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables.scss';
+
 .radio-select {
     display: flex;
     flex-direction: column;
@@ -9,6 +11,32 @@
 
     &:not(:first-child) {
         margin-top: 10px;
+    }
+}
+
+.input-field__input {
+    width: 100%;
+    max-width: 100%;
+    min-height: 32px;
+    padding: 15px 0px;
+    margin: 0px;
+    outline: none;
+    box-sizing: border-box;
+    border: 1px solid #eeeeee;
+    border-radius: 3px;
+    text-indent: 10px;
+    font: $font-size-small $font-family-body;
+    color: $color-body;
+    transition: border-color 0.2s linear, box-shadow 0.2s ease;
+
+    &:hover,
+    &:focus {
+        box-shadow: 0 0 3px rgba(0,0,0,.2);
+        min-height: 32px;
+    }
+
+    &--error {
+        border-color: $color-error;
     }
 }
 
