--- a/src/components/pages/Groups/Groups.scss
+++ b/src/components/pages/Groups/Groups.scss
@@ -21,12 +21,17 @@
 }
 
 .groups__add-button {
-    width: 130px;
+    width: 150px;
 }
 
 .groups__register-button {
     width: 140px;
-    margin: 15px;
+    margin: 20 15 15 15;
+}
+
+.groups__keep-buying-button {
+  width: 100%;
+  margin: 20 15 15 15;
 }
 
 .groups {
@@ -45,6 +50,11 @@
 }
 
 .groups-register-modal-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.groups-bottoms-container {
   display: flex;
   flex-direction: row;
 }
