--- a/src/components/pages/Groups/VerdurasProduct.scss
+++ b/src/components/pages/Groups/VerdurasProduct.scss
@@ -107,6 +107,9 @@
     max-width: 400px;
 }
 
+.product-page__name {
+  width: 100%;
+}
 // Main Info & Actions
 
 .product-page__details {
@@ -170,8 +173,6 @@
 
 .product-page__description {
     margin-top: 30px;
-    padding-top: 30px;
-    border-top: 1px solid #eeeeee;
 }
 
 .product-page__description-content {
@@ -221,4 +222,43 @@
     display: flex;
     justify-content: center;
     margin-top: 30px;
+}
+
+.table__table {
+    width: 70%;
+    border: 1px solid #eeeeee;
+    text-align: left;
+}
+
+.table__row {
+    border-bottom: 1px solid #eeeeee;
+
+
+    &--info {
+        background-color: $background-color-table-info;
+    }
+
+    &--success {
+        background-color: $background-color-table-success;
+    }
+
+    &--warning {
+        background-color: $background-color-table-warning;
+    }
+
+    &--error {
+        background-color: $background-color-table-error;
+    }
+}
+
+.table__heading,
+.table__data {
+    vertical-align: middle;
+    padding: 2px;
+}
+
+.table__body > .table__row {
+    &:hover {
+        background-color: #F9F9F9;
+    }
 }
