--- a/src/components/pages/Groups/Groups.scss
+++ b/src/components/pages/Groups/Groups.scss
@@ -34,6 +34,16 @@
   margin: 20 15 15 15;
 }
 
+.groups__warning {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 15px;
+    padding: 10px;
+    background-color: $color-secondary;
+    border-radius: $border-radius-default;
+}
+
 .groups {
   margin: 5px;
 }
