--- a/src/components/common/layout/Header/HandheldsHeader.scss
+++ b/src/components/common/layout/Header/HandheldsHeader.scss
@@ -70,7 +70,7 @@
     width: 60;
     height: 60;
     position:static;
-    background: url('./tienda-santa-2.png');
+    background: url('./tienda-santa.png');
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: top center;
