--- a/src/components/common/layout/Footer/Footer.scss
+++ b/src/components/common/layout/Footer/Footer.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     padding: 40px 0 40px 0;
-    background-color: $color-secondary;
+    background-color: black;
 }
 
 /*
@@ -134,8 +134,7 @@
     display: flex;
     justify-content: center;
     margin-top: 40px;
-
     & > span {
-        color: $color-primary;
+        color: white;
     }
 }
