--- a/src/components/common/layout/Header/HeaderHighlight.scss
+++ b/src/components/common/layout/Header/HeaderHighlight.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     padding: 7.5px 0;
-    background-color: #eee;
+    background-color: white;
 }
 
 .header-highlight__shipping-icon {
