--- a/src/components/common/navigation/MainNavigation.scss
+++ b/src/components/common/navigation/MainNavigation.scss
@@ -9,11 +9,12 @@
     display: inline;
     margin-left: 20px;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 400;
     letter-spacing: 1px;
+    text-transform: uppercase;
 
     & > a {
-        color: $color-heading;
+        color: yellow;
         text-decoration: none;
         &:hover {
             color: $color-primary;
