--- a/src/components/common/products/ProductList.scss
+++ b/src/components/common/products/ProductList.scss
@@ -50,7 +50,7 @@
     text-align: center;
     background-color: #eee;
     padding: 10px 0  10px 0;
-    border: solid 3px #c20030;
+    border: solid 3px black;
 }
 
 .product-list__collection-description {
