--- a/src/components/common/layout/Header/DesktopHeader.scss
+++ b/src/components/common/layout/Header/DesktopHeader.scss
@@ -159,6 +159,6 @@
     width: 30px;
     height: 30px;
     cursor: pointer;
-    background: url('./cart.png');
+    background: url('./cart-white.png');
     background-size: 100%;
 }
