--- a/src/components/common/modals/Modal.scss
+++ b/src/components/common/modals/Modal.scss
@@ -51,10 +51,11 @@
 }
 
 .modal__close-button {
-    float: right;
-    margin: -15px 0;
-    cursor: pointer;
-    font-size: 1.6em;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  background: url('./close.png');
+  background-size: 100%;
 }
 
 /*
