--- a/src/components/common/products/ProductList.scss
+++ b/src/components/common/products/ProductList.scss
@@ -12,7 +12,7 @@
   width: 100%;
   height: 240px;
   cursor: pointer;
-  background: url('./cajon-frutas.png');
+  background: url('./cajon-banner.png');
   background-repeat: no-repeat;
   background-size: 100%;
   @include breakpoint(handhelds) {
@@ -106,6 +106,15 @@
     padding: 8px;
     @include breakpoint(handhelds) {
         width: 50%;
+    }
+}
+
+.product-list__product-item-cajon {
+    flex: 0 1 auto;
+    width: 33%;
+    padding: 8px;
+    @include breakpoint(handhelds) {
+        width: 100%;
     }
 }
 
