--- a/src/components/pages/Products/ProductPage.scss
+++ b/src/components/pages/Products/ProductPage.scss
@@ -17,6 +17,49 @@
     }
 }
 
+.groups-table__table {
+    width: 70%;
+    border: 1px solid #eeeeee;
+    text-align: left;
+}
+
+.groups-table__row {
+    border-bottom: 1px solid #eeeeee;
+
+
+    &--info {
+        background-color: $background-color-table-info;
+    }
+
+    &--success {
+        background-color: $background-color-table-success;
+    }
+
+    &--warning {
+        background-color: $background-color-table-warning;
+    }
+
+    &--error {
+        background-color: $background-color-table-error;
+    }
+}
+
+.groups-page__description {
+    margin-top: 30px;
+}
+
+.groups-table__heading,
+.groups-table__data {
+    vertical-align: middle;
+    padding: 2px;
+}
+
+.groups-table__body > .groups-table__row {
+    &:hover {
+        background-color: #F9F9F9;
+    }
+}
+
 .input-field__input {
     width: 100%;
     max-width: 100%;
