product list fix and .gitignoe

--- a/src/components/common/products/ProductListItem.scss
+++ b/src/components/common/products/ProductListItem.scss
@@ -3,6 +3,7 @@
 .product-list-item {
     padding: 7px;
     text-align: center;
+    max-width: 300px;
 
     & > a {
         text-decoration: none;
