--- a/src/components/pages/Checkout/CheckoutShippingInformation.scss
+++ b/src/components/pages/Checkout/CheckoutShippingInformation.scss
@@ -7,6 +7,12 @@
     border: 1px solid #eee;
 }
 
+.checkout-shipping-information__content {
+    margin-top: 10px;
+    padding: 15px;
+    border: 1px solid #eee;
+}
+
 .checkout-summary__warning {
     display: flex;
     flex-direction: column;
