--- a/src/components/pages/Checkout/CheckoutShippingInformation.scss
+++ b/src/components/pages/Checkout/CheckoutShippingInformation.scss
@@ -37,7 +37,7 @@
     background-repeat: no-repeat;
     margin: 15 0 0 15;
     &:hover {
-      border: 1px solid red;
+      border: 1px solid green;
       border-radius: 3px;
     }
 }
